# NodeRED.py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
noderedpy/: __init__.py  __property__.py  _nodered.py  _property.py  _server.py  _templates.py  decorator.py
noderedpy/__nodered__/: __init__.py  auth.py  node.py  red.py  route.py  theme.py
noderedpy/node-red-starter/: index.js  package.json  route.js
noderedpy/nodered/: auth.py  theme.py
noderedpy/nodered/node/: __init__.py  communicator.py  node.py
noderedpy/nodered/node/properties/: __init__.py  checkbox.py  code.py  combobox.py  dict.py  input.py  list.py  property.py  spinner.py  typed_input.py  typedinput.py
noderedpy/nodered/red/: __init__.py  builder.py  red.py
noderedpy/nodered/red/editor/: editor.py  widget.py
noderedpy/nodered/red/editor/ui/: __init__.py  divider.py  tab.py
noderedpy/templates/: __init__.py  html.py  javascript.py  package.py  template.html  template.js  template.json
tests/: custom_property.py  custom_widget.py  pywebview_test.py  server_test.py  standalone_test.py
tests/static/: index.html
