[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nodered.py"
authors = [{name = "oyajiDev", email = "this.dev.somehit@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "psutil==5.9.5",
    "wget==3.2",
    "Pillow==10.0.0"
]
classifiers = [
    "License :: OSI Approved :: MIT License",

    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.flit.module]
name = "noderedpy"

[project.urls]
repository = "https://github.com/oyajiDev/NodeRED.py"
